portfolio-web-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-web-application
  labels:
    app: portfolio-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-web
  template:
    metadata:
      labels:
        app: portfolio-web
    spec:
      containers:
      - name: portfolio-container
        image: asia-south1-docker.pkg.dev/testing-bharani/portfolio-artifact-registry/portfolio-website:30
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 3
