load-balancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-web-lb
  annotations:
    cloud.google.com/load-balancer-type: "external"
  labels:
    app: portfolio-web
spec:
  type: LoadBalancer
  selector:
    app: portfolio-web
  ports:
    - protocol: TCP
      port: 80      
      targetPort: 80
