service-portfolio.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-web-service
  labels:
    app: portfolio-web
spec:
  type: ClusterIP  # Must be ClusterIP when using Ingress
  selector:
    app: portfolio-web
  ports:
    - port: 80         # Service port
      targetPort: 80   # Container port
