ingress-portfolio.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-web-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"  # GCP Ingress
    kubernetes.io/ingress.global-static-ip-name: "portfolio-ip" # Optional: static IP
spec:
  rules:
  - host: demo.anu.in  # Optional, your domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portfolio-web-service
            port:
              number: 80
